# taskr

./: .env.example  .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md
docs/modules/: devlogs.md  github.md  sessions.md  tasks.md  triage.md
docs/research/: README.md  embedding-limitations-theory.md  hybrid-search-pgvector-rrf.md  taskr-triage-workflow-case-study.md  transcription-glossary-pipeline.md
scripts/: test-mcp.sh
tests/: conftest.py  requirements.txt
tests/core/: test_config.py  test_devlog_service.py  test_models.py  test_session_service.py  test_sqlite_adapter.py  test_task_service.py
tests/integration/: test_full_stack.py
tests/mcp/: test_github_tools.py
