[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskr-workspace"
version = "0.1.0"
description = "Taskr - AI-native task management MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rhea Impact", email = "hello@rhea-impact.org" }
]
keywords = ["mcp", "task-management", "ai", "claude", "devlog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
